# api

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  justfile  openapi.json  railway.json
migrations/: 20240108113847_init.sql  20240712123808_init.sql  20240712125555_add_variable_tags.sql  20240903184003_default_variable_tag.sql  20250211093708_add_name_to_projects.sql  20250222002614_project_invites.sql  20250625092825_unique_user-project_relations.sql  20251025060537_invites_v2.sql
src/: db.rs  error.rs  macros.rs  main.rs  state.rs  structs.rs
src/extractors/: user.rs
src/guards/: user.rs
src/helpers/: project.rs
src/routes/: _template.rs.md  index.rs  mod.rs  projects.rs  test.rs  test_auth.rs  user.rs  variables.rs  well_known.rs  ws_handler.rs
src/routes/v2/: mod.rs
src/routes/v2/invite/: accept.rs  mod.rs  new.rs
src/routes/v2/project/: add_user.rs  info.rs  mod.rs  remove_user.rs  remove_users.rs  update.rs  variables.rs
src/routes/v2/projects/: list.rs  mod.rs  new.rs
src/routes/v2/user/: get.rs  get_many.rs  mod.rs  new.rs
src/routes/v2/variables/: delete.rs  get.rs  mod.rs  set_many.rs  update_many.rs
src/traits/: mod.rs  to_uuid.rs
src/utils/: mod.rs  rpgp.rs  uuid.rs
