[package]
name = "rusty-api"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  # "tls-native-tls",
  "tls-rustls",
  "postgres",
  "uuid",
  "chrono",
  "macros",
  "json",
  "migrate",
] }

argon2 = "0.5.0"
anyhow = "1.0"
base64 = "0.22"
crypto-hash = "0.3.4"
dotenv = "0.15.0"
hex = "0.4.3"
pgp = "0.17.0"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.13.2"
chrono = { version = "0.4", features = ["serde"] }

axum = { version = "0.8", features = ["macros", "http2"] }
axum-extra = { version = "0.10", features = ["typed-header"] }

uuid = { version = "1.13", features = ["serde", "v4"] }

utoipa = { version = "5.3.1", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
utoipa-axum = "0.2.0"

tracing = "^0.1"
tracing-subscriber = "^0.3"
tower-http = { version = "0.6", features = ["trace"] }
